--- a/Asssets/Style/style.css
+++ b/Asssets/Style/style.css
@@ -62,7 +62,31 @@
   width: 100%;
   height: 800px;
 }
+* body .main .slide__container .main__slide {
+  position: relative;
+}
+* body .main .slide__container .main__slide .slide__hearder {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  gap: 165px;
+  padding: 5px 40px;
+}
+* body .main .slide__container .main__slide .slide__hearder .slide__menu {
+  color: white;
+  text-decoration: none;
+  padding: 0 15px;
+  font-size: 13px;
+  font-weight: 700;
+}
+* body .main .slide__container .main__slide .slide__hearder .icon {
+  cursor: pointer;
+  width: 162px;
+  height: 50px;
+}
 * body .main .slide__container .main__slide .main__slide--img {
+  z-index: -1;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
