--- a/Asssets/Style/style.scss
+++ b/Asssets/Style/style.scss
@@ -74,7 +74,33 @@
                 height: 800px;
 
                 .main__slide {
+                    position: relative;
+
+                    .slide__hearder {
+                        display: flex;
+                        align-items: center;
+                        position: absolute;
+                        top: 0;
+                        gap: 165px;
+                        padding: 5px 40px;
+
+                        .slide__menu {
+                            color: white;
+                            text-decoration: none;
+                            padding: 0 15px;
+                            font-size: 13px;
+                            font-weight: 700;
+                        }
+
+                        .icon {
+                            cursor: pointer;
+                            width: 162px;
+                            height: 50px;
+                        }
+                    }
+
                     .main__slide--img {
+                        z-index: -1;
                         width: 100%;
                         height: 100%;
                         object-fit: cover;
