--- a/Asssets/Style/style.css
+++ b/Asssets/Style/style.css
@@ -14,17 +14,18 @@
   justify-content: space-between;
 }
 * body .main .main__nav .main__nav--left {
-  font-size: 12px;
+  font-size: 11px;
   font-weight: 300;
   color: rgba(50, 50, 50, 0.6901960784);
   outline: none;
   scale: 1 1.02;
+  text-shadow: 0 0 0 rgba(50, 50, 50, 0.4666666667);
 }
 * body .main .main__nav .main__nav--center {
   display: flex;
   justify-content: center;
   gap: 27px;
-  margin-right: 105px;
+  margin-right: 54px;
 }
 * body .main .main__nav .main__nav--center .logo {
   color: #323232;
@@ -32,8 +33,8 @@
   cursor: pointer;
 }
 * body .main .main__nav .main__nav--center .logo:hover {
-  transition: 100ms;
-  padding-top: 10px;
+  transition: 650ms;
+  transform: translateY(10px);
 }
 * body .main .main__nav .main__nav--right {
   display: flex;
@@ -76,9 +77,14 @@
 * body .main .slide__container .main__slide .slide__hearder .slide__menu {
   color: white;
   text-decoration: none;
-  padding: 0 15px;
+  padding: 9px 15px;
   font-size: 13px;
   font-weight: 700;
+}
+* body .main .slide__container .main__slide .slide__hearder .slide__menu:hover {
+  border-bottom: #FFCD05 3px solid;
+  transition: 100ms;
+  transition-timing-function: ease-in-out;
 }
 * body .main .slide__container .main__slide .slide__hearder .icon {
   cursor: pointer;
